// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render invalid state 1`] = `
<div
  className="cf-12y5tyj"
/>
`;

exports[`should render invalid state with validation errors 1`] = `
<div
  className="cf-12y5tyj"
>
  <p>
    This is required
  </p>
</div>
`;
